--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,13 +12,13 @@
         <div class="collapse navbar-collapse justify-content-around text-center" id="navbar10">
             <ul class="navbar-nav">
                 <li class="nav-item py-2 mx-3">
-                    <a href="#sobre-mi">Sobre mí</a>
+                    <a href="#sobre-mi">{{ 'label.navbar.about' | translate }}</a>
                 </li>
                 <li class="nav-item py-2 mx-3">
-                    <a href="#tecnologias">Tecnologías</a>
+                    <a href="#tecnologias">{{ 'label.navbar.tech' | translate }}</a>
                 </li>
                 <li class="nav-item py-2 mx-3">
-                    <a href="#proyectos">Proyectos</a>
+                    <a href="#proyectos">{{ 'label.navbar.projects' | translate }}</a>
                 </li>
                 <!--
                 <li class="nav-item">
@@ -26,7 +26,7 @@
                 </li>
                 -->
                 <li class="nav-item py-2 mx-3">
-                    <a href="#contacto">Contacto</a>
+                    <a href="#contacto">{{ 'label.navbar.contact' | translate }}</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -48,6 +48,17 @@
                                 d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
                             </path>
                         </svg></a>
+                </li>
+                <li class="nav-item py-2 mx-2">
+                    @if (lang == 'es') {
+                    <img src="/assets/images/ES.png" class="flag" alt="ES.png" width="44px" height="auto"
+                        (click)="changeLanguage('en')">
+
+                    } @else if (lang == 'en') {
+                    <img src="/assets/images/UK.png" class="flag" alt="UK.png" width="44px" height="auto"
+                        (click)="changeLanguage('es')">
+
+                    }
                 </li>
             </ul>
         </div>
