--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -224,7 +224,7 @@
         </div>
         <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">Herramientas</p>
+                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.tools' | translate }}</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
@@ -284,7 +284,7 @@
         </div>
         <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">Aprendiendo</p>
+                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.learning' | translate }}</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
