--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
                     <a href="#contacto">{{ 'label.navbar.contact' | translate }}</a>
                 </li>
             </ul>
-            <ul class="navbar-nav align-items-center">
+            <ul class="navbar-nav">
                 <li class="nav-item py-2 mx-2">
                     <a href="https://github.com/ricardohuaripata" target="_blank"
                         title="GitHub - Visita mi perfil en GitHub"><svg stroke="none" fill="#e2e8f0" stroke-width="0"
@@ -50,15 +50,12 @@
                         </svg></a>
                 </li>
                 <li class="nav-item py-2 mx-2">
-                    @if (lang == 'es') {
-                    <img src="/assets/images/ES.png" class="flag" alt="ES.png" width="44px" height="auto"
-                        (click)="changeLanguage('en')">
+                    <select (change)="changeLanguage($event)">
+                        <option value="es">Español</option>
+                        <option value="en">English</option>
 
-                    } @else if (lang == 'en') {
-                    <img src="/assets/images/UK.png" class="flag" alt="UK.png" width="44px" height="auto"
-                        (click)="changeLanguage('es')">
+                    </select>
 
-                    }
                 </li>
             </ul>
         </div>
