--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,16 +12,16 @@
         <div class="collapse navbar-collapse justify-content-around text-center" id="navbar10">
             <ul class="navbar-nav">
                 <li class="nav-item py-2 mx-3">
-                    <a [routerLink]="['/']" fragment="sobre-mi">{{ 'label.navbar.about' | translate }}</a>
+                    <a [routerLink]="['/']" fragment="sobre-mi" class="navbar-link">{{ 'label.navbar.about' | translate }}</a>
                 </li>
                 <li class="nav-item py-2 mx-3">
-                    <a [routerLink]="['/']" fragment="tecnologias">{{ 'label.navbar.tech' | translate }}</a>
+                    <a [routerLink]="['/']" fragment="tecnologias" class="navbar-link">{{ 'label.navbar.tech' | translate }}</a>
                 </li>
                 <li class="nav-item py-2 mx-3">
-                    <a [routerLink]="['/']" fragment="proyectos">{{ 'label.navbar.projects' | translate }}</a>
+                    <a [routerLink]="['/']" fragment="proyectos" class="navbar-link">{{ 'label.navbar.projects' | translate }}</a>
                 </li>
                 <li class="nav-item py-2 mx-3">
-                    <a [routerLink]="['/']" fragment="contacto">{{ 'label.navbar.contact' | translate }}</a>
+                    <a [routerLink]="['/']" fragment="contacto" class="navbar-link">{{ 'label.navbar.contact' | translate }}</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
