--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,7 +106,7 @@ nav {
     -webkit-mask-position: -50%;
   }
 }
-
+/*
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -119,7 +119,7 @@ nav {
   background: var(--brand-main);
   border-radius: 5px;
 }
-
+*/
 @media (max-width: 470px) {
   .skill-icon {
     width: 70%;
