--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div *ngFor="let project of projects" class="col-md-5 rounded mx-auto mt-4 box-background px-0">
             <div>
-                <div class="img-card-project-container rounded relative">
+                <div class="img-card-project-container rounded relative autoShow">
                     <img [src]="project.thumbnail" class="img-card-project" [alt]="project.title" width="100%"
                         height="auto" loading="lazy">
                         <div class="position-absolute top-0 start-0 p-3">
