--- a/src/styles.scss
+++ b/src/styles.scss
@@ -152,3 +152,43 @@ a {
   aspect-ratio: 3 / 2;
   object-fit: cover;
 }
+
+@keyframes autoShowAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(200px) scale(0.3);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+
+.autoShow {
+  animation: autoShowAnimation both;
+  animation-timeline: view(70% 5%);
+}
+
+.animate-trackingRight {
+  opacity: 0;
+  animation: trackingRight 1s cubic-bezier(0, 0.19, 0.56, 1) forwards;
+}
+
+.will-change-transform {
+  will-change: transform;
+}
+
+@keyframes trackingRight {
+  0% {
+    opacity: 0;
+    transform: translate(-100vw);
+  }
+
+  80% {
+    transform: translate(50%) scale(1.2);
+  }
+  100% {
+    transform: translate(1);
+    opacity: 1;
+  }
+}
