--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -112,6 +112,18 @@
                         </div>
                     </div>
 
+                    <div>
+                        <div class="text-center">
+                            <svg class="skill-icon mb-2" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 128 128">
+                                <path
+                                    d="M64.004 25.602c-17.067 0-27.73 8.53-32 25.597 6.398-8.531 13.867-11.73 22.398-9.597 4.871 1.214 8.352 4.746 12.207 8.66C72.883 56.629 80.145 64 96.004 64c17.066 0 27.73-8.531 32-25.602-6.399 8.536-13.867 11.735-22.399 9.602-4.87-1.215-8.347-4.746-12.207-8.66-6.27-6.367-13.53-13.738-29.394-13.738zM32.004 64c-17.066 0-27.73 8.531-32 25.602C6.402 81.066 13.87 77.867 22.402 80c4.871 1.215 8.352 4.746 12.207 8.66 6.274 6.367 13.536 13.738 29.395 13.738 17.066 0 27.73-8.53 32-25.597-6.399 8.531-13.867 11.73-22.399 9.597-4.87-1.214-8.347-4.746-12.207-8.66C55.128 71.371 47.868 64 32.004 64zm0 0"
+                                    fill="#38bdf8" />
+                            </svg>
+
+                            <p class="responsive-text">Tailwind CSS</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -224,7 +236,8 @@
         </div>
         <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.tools' | translate }}</p>
+                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.tools' |
+                    translate }}</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
@@ -284,7 +297,8 @@
         </div>
         <div class="col-md-5 border rounded mx-auto mt-4 box-background">
             <div class="mx-3 my-4">
-                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.learning' | translate }}</p>
+                <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.learning' |
+                    translate }}</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
                     <div>
                         <div class="text-center">
@@ -314,21 +328,30 @@
                     </div>
                     <div>
                         <div class="text-center">
-                            <svg class="skill-icon mb-2" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 109 113" fill="none">
-                                <path d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z" fill="url(#paint0_linear)"/>
-                                <path d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z" fill="url(#paint1_linear)" fill-opacity="0.2"/>
-                                <path d="M45.317 2.07103C48.1765 -1.53037 53.9745 0.442937 54.0434 5.041L54.4849 72.2922H9.83113C1.64038 72.2922 -2.92775 62.8321 2.1655 56.4175L45.317 2.07103Z" fill="#3ECF8E"/>
+                            <svg class="skill-icon mb-2" xmlns="http://www.w3.org/2000/svg" width="70" height="70"
+                                viewBox="0 0 109 113" fill="none">
+                                <path
+                                    d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z"
+                                    fill="url(#paint0_linear)" />
+                                <path
+                                    d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z"
+                                    fill="url(#paint1_linear)" fill-opacity="0.2" />
+                                <path
+                                    d="M45.317 2.07103C48.1765 -1.53037 53.9745 0.442937 54.0434 5.041L54.4849 72.2922H9.83113C1.64038 72.2922 -2.92775 62.8321 2.1655 56.4175L45.317 2.07103Z"
+                                    fill="#3ECF8E" />
                                 <defs>
-                                <linearGradient id="paint0_linear" x1="53.9738" y1="54.974" x2="94.1635" y2="71.8295" gradientUnits="userSpaceOnUse">
-                                <stop stop-color="#249361"/>
-                                <stop offset="1" stop-color="#3ECF8E"/>
-                                </linearGradient>
-                                <linearGradient id="paint1_linear" x1="36.1558" y1="30.578" x2="54.4844" y2="65.0806" gradientUnits="userSpaceOnUse">
-                                <stop/>
-                                <stop offset="1" stop-opacity="0"/>
-                                </linearGradient>
+                                    <linearGradient id="paint0_linear" x1="53.9738" y1="54.974" x2="94.1635"
+                                        y2="71.8295" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#249361" />
+                                        <stop offset="1" stop-color="#3ECF8E" />
+                                    </linearGradient>
+                                    <linearGradient id="paint1_linear" x1="36.1558" y1="30.578" x2="54.4844"
+                                        y2="65.0806" gradientUnits="userSpaceOnUse">
+                                        <stop />
+                                        <stop offset="1" stop-opacity="0" />
+                                    </linearGradient>
                                 </defs>
-                                </svg>
+                            </svg>
                             <p class="responsive-text">Supabase</p>
                         </div>
                     </div>
