--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,12 +1,14 @@
+/*
 .img-card-project-container {
-  overflow: hidden; /* Oculta el desbordamiento de la imagen */
-  position: relative; /* Asegura que el posicionamiento relativo del contenedor */
+  overflow: hidden;
+  position: relative;
 }
 
 .img-card-project:hover {
-  transform: scale(1.2); /* Aplica un zoom del 120% al hacer hover */
+  transform: scale(1.2);
 }
 
 .img-card-project {
-  transition: transform 0.3s ease; /* Añade una transición suave */
+  transition: transform 0.3s ease;
 }
+*/
