--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,8 +2,8 @@
     <div class="row justify-content-center">
         <div *ngFor="let project of projects" class="col-md-5 rounded mx-auto mt-4 box-background px-0">
             <div>
-                <div class="img-card-project-container rounded relative autoShow">
-                    <img [src]="project.thumbnail" class="img-card-project" [alt]="project.title" width="100%"
+                <div class="relative autoShow">
+                    <img [src]="project.thumbnail" class="img-card-project rounded" [alt]="project.title" width="100%"
                         height="auto" loading="lazy">
                         <div class="position-absolute top-0 start-0 p-3">
                             <span class="bg-black p-1 rounded bg-opacity-50 fw-semibold">{{project.category}}</span>
@@ -15,7 +15,7 @@
                         @if (project.id == 'ogs-ecommerce' || project.id == 'ashon-ecommerce') {
                             <p class="fs-5 fw-bold"><a [routerLink]="[project.link]">{{project.title}}</a></p>
                         } @else {
-                            <p class="fs-5 fw-bold"><a [href]="project.link">{{project.title}}</a></p>
+                            <p class="fs-5 fw-bold"><a [href]="project.link" target="_blank">{{project.title}}</a></p>
                         }
 
                         <app-github [href]="project.githubRepoUrl" [title]="'label.social.github.project.title' | translate"
