new section in project page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,16 +11,16 @@
 
         <div class="collapse navbar-collapse justify-content-around text-center" id="navbar10">
             <ul class="navbar-nav overflow-hidden">
-                <li class="nav-item py-2 mx-3 will-change-transform animate-trackingRight d-inline-block" style="animation-delay:calc(0.05 * 0s)">
+                <li class="nav-item py-2 mx-3">
                     <a [routerLink]="['/']" fragment="sobre-mi" class="navbar-link">{{ 'label.navbar.about' | translate }}</a>
                 </li>
-                <li class="nav-item py-2 mx-3 will-change-transform animate-trackingRight d-inline-block" style="animation-delay:calc(0.05 * 2s)">
+                <li class="nav-item py-2 mx-3">
                     <a [routerLink]="['/']" fragment="tecnologias" class="navbar-link">{{ 'label.navbar.tech' | translate }}</a>
                 </li>
-                <li class="nav-item py-2 mx-3 will-change-transform animate-trackingRight d-inline-block" style="animation-delay:calc(0.05 * 4s)">
+                <li class="nav-item py-2 mx-3">
                     <a [routerLink]="['/']" fragment="proyectos" class="navbar-link">{{ 'label.navbar.projects' | translate }}</a>
                 </li>
-                <li class="nav-item py-2 mx-3 will-change-transform animate-trackingRight d-inline-block" style="animation-delay:calc(0.05 * 6s)">
+                <li class="nav-item py-2 mx-3">
                     <a [routerLink]="['/']" fragment="contacto" class="navbar-link">{{ 'label.navbar.contact' | translate }}</a>
                 </li>
             </ul>
