--- a/src/app/pages/project-page/project-page.component.html
+++ b/src/app/pages/project-page/project-page.component.html
@@ -46,6 +46,18 @@
     </section>
 
     <section class="mb-5">
+        <div class="mx-3">
+            <h3 class="shiny-title fw-bold mb-3">Galeria</h3>
+        </div>
+
+        <div class="row">
+            @for (image of project.gallery; track $index) {
+            <div class="col-md-6 mb-4">
+                <img [src]="image" class="img-card-project rounded" [alt]="'image gallery ' + ($index + 1)" width="100%"
+                    height="auto">
+            </div>
+            }
+        </div>
 
         <swiper-container navigation="true">
             @for (video of project.videos; track video) {
