--- a/src/app/pages/project-page/project-page.component.html
+++ b/src/app/pages/project-page/project-page.component.html
@@ -50,14 +50,7 @@
             <h3 class="shiny-title fw-bold mb-3">{{ 'label.project.gallery.title' | translate }}</h3>
         </div>
 
-        <div class="row">
-            @for (image of project.gallery; track $index) {
-            <div class="col-md-6 mb-4">
-                <img [src]="image" class="img-card-project rounded" [alt]="'image gallery ' + ($index + 1)" width="100%"
-                    height="auto">
-            </div>
-            }
-        </div>
+        <app-photo-gallery [images]="project.gallery!"></app-photo-gallery>
 
         <swiper-container navigation="true">
             @for (video of project.videos; track video) {
