--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -10,7 +10,7 @@
                 <p class="fs-5 mt-5 mb-4" [innerHTML]="'label.home.about.presentation' | translate"></p>
             </div>
             <div class="col-md-4">
-                <img src="/assets/images/retrato-min.webp" class="mx-auto d-block" alt="retrato-min.webp" width="100%"
+                <img src="https://res.cloudinary.com/dmravgyts/image/upload/v1727970996/projects/retrato-min_blyerx.png" class="mx-auto d-block" alt="retrato-min.webp" width="100%"
                     height="auto">
             </div>
         </div>
