--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,5 +1,4 @@
-<div class="container mt-4">
-    <div class="row">
+    <div class="row mt-4">
         <div *ngFor="let project of projects" class="col-md-6 mt-4">
             <div class="box-background rounded h-100">
                 <div class="relative autoShow">
@@ -33,4 +32,3 @@
             </div>
         </div>
     </div>
-</div>
