--- a/src/app/pages/project-page/project-page.component.html
+++ b/src/app/pages/project-page/project-page.component.html
@@ -58,7 +58,7 @@
             <swiper-slide>
                 <div class="ratio ratio-16x9">
                     <video preload="none" controls [poster]="video.thumbnail">
-                        <source [src]="video.link" type="video/mp4">
+                        <source [src]="video.link" type="video/webm">
                         Tu navegador no soporta el tag de video.
                     </video>
                 </div>
