--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
             <img src="/assets/images/logo.png" alt="ricardohuaripata.com" width="48px" height="48px">
         </a>
 
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar10"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar10"
             aria-controls="navbar10" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
