--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
+<div class="row">
+    <div class="col-md-6 mt-4">
+        <div class="box-background border rounded h-100">
             <div class="mx-3 my-4">
                 <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">Frontend</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
@@ -114,7 +114,8 @@
 
                     <div>
                         <div class="text-center">
-                            <svg class="skill-icon mb-2" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 128 128">
+                            <svg class="skill-icon mb-2" xmlns="http://www.w3.org/2000/svg" width="70" height="70"
+                                viewBox="0 0 128 128">
                                 <path
                                     d="M64.004 25.602c-17.067 0-27.73 8.53-32 25.597 6.398-8.531 13.867-11.73 22.398-9.597 4.871 1.214 8.352 4.746 12.207 8.66C72.883 56.629 80.145 64 96.004 64c17.066 0 27.73-8.531 32-25.602-6.399 8.536-13.867 11.735-22.399 9.602-4.87-1.215-8.347-4.746-12.207-8.66-6.27-6.367-13.53-13.738-29.394-13.738zM32.004 64c-17.066 0-27.73 8.531-32 25.602C6.402 81.066 13.87 77.867 22.402 80c4.871 1.215 8.352 4.746 12.207 8.66 6.274 6.367 13.536 13.738 29.395 13.738 17.066 0 27.73-8.53 32-25.597-6.399 8.531-13.867 11.73-22.399 9.597-4.87-1.214-8.347-4.746-12.207-8.66C55.128 71.371 47.868 64 32.004 64zm0 0"
                                     fill="#38bdf8" />
@@ -126,9 +127,12 @@
 
                 </div>
             </div>
-
         </div>
-        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
+
+
+    </div>
+    <div class="col-md-6 mt-4">
+        <div class="box-background border rounded h-100">
             <div class="mx-3 my-4">
                 <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">Backend</p>
                 <div class="row row-cols-3 row-cols-md-3 g-4">
@@ -234,7 +238,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
+
+    </div>
+    <div class="col-md-6 mt-4">
+        <div class="box-background border rounded h-100">
             <div class="mx-3 my-4">
                 <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.tools' |
                     translate }}</p>
@@ -295,7 +302,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5 border rounded mx-auto mt-4 box-background">
+
+    </div>
+    <div class="col-md-6 mt-4">
+        <div class="box-background border rounded h-100">
             <div class="mx-3 my-4">
                 <p class="fs-2 fw-bold shiny-title text-center mb-4 shine-effect">{{ 'label.home.tech.stack.learning' |
                     translate }}</p>
@@ -358,6 +368,6 @@
                 </div>
             </div>
         </div>
-    </div>
 
+    </div>
 </div>
