--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,8 +1,8 @@
 img {
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
   border-radius: 50%;
   border: 3px solid white;
+  max-width: 100%;
+  height: auto;
 }
 
 section {
