--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-    <footer class="my-5 py-4 text-center">
-        <p class="my-0 mb-5">
+    <footer class="my-5 text-center">
+        <p class="my-0 py-4 fw-semibold">
             <small>© 2024 Ricardo Huaripata Bellido</small>
         </p>
-        <hr>
     </footer>
 </div>
