--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -66,7 +66,7 @@
         <div class="container mt-4">
             <div class="row justify-content-center">
                 <div class="col-md-6 border text-bg-light rounded">
-                    <form [formGroup]="form" class="mx-2 my-4" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="form" class="px-2 my-4" (ngSubmit)="onSubmit()">
                         <div class="mb-3">
                             <input type="text" class="form-control" id="name" [placeholder]="'label.home.contact.form.name' | translate"
                                 formControlName="name" autocomplete="name"
